banner section end

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- =-=-=-=-=-=-=-=-=-=-=-=-=-=-=
             header section
     =-==-=-=-=-=-==-=-=-=-=-=-=-=-==- -->
-    <header class="bg-gradient-to-r from-[#ffffff] to-[#ffffff] w-4/5 mx-auto pt-8">
+    <header class="bg-gradient-to-r from-[#ffffff] to-[#ffffff] md:w-4/5 mx-auto p-5">
         <!-- nev section end -->
             <div class="navbar ">
                 <div class="navbar-start">
@@ -38,7 +38,7 @@
                         </ul>
                     </div>
                        
-                    <a class="btn btn-ghost text-xl text-[#212121]"> <div class="rounded-full flex items-center justify-center bg-green-500 w-6 h-6">
+                    <a class="btn btn-ghost text-xl text-[#212121]"> <div class="rounded-full flex items-center justify-center bg-[#ABEF5F80] w-6 h-6">
                         <i class="fa-solid fa-arrow-up rotate-45"></i>
                     </div> Rinterio</a>
               
@@ -59,7 +59,7 @@
 
                         <a href="#" class="inline-block w-7 h-7 bg-gray-500 rounded-full flex justify-center items-center"> <i class="fa-solid fa-cart-shopping text-[#E9E9E9]"></i></a>
 
-                        <a class="btn">Book Consult<div class="rounded-full flex items-center justify-center bg-black w-6 h-6">
+                        <a class="btn bg-[#ABEF5F] rounded-3xl">Book Consult<div class="rounded-full flex items-center justify-center bg-black w-6 h-6">
                             <i class="fa-solid fa-arrow-up rotate-45 text-white"></i>
                         </div></a>
                     </div>
@@ -82,7 +82,20 @@
             </div>
             <!-- banner section -->
             <section>
-
+                <!-- img section -->
+                <div class="md:w-3/5 mx-auto flex justify-center">
+                    <img src="./assets/banner.png" alt="">
+                </div>
+                <!-- banner text section -->
+                <div>
+                    <h1 class="font-bold text-3xl md:text-5xl text-black text-center w-3/4 mx-auto">A barn house of this design has a striking appearance</h1>
+                    <p class="text-center w-4/5 mx-auto py-5">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large windows that flood the space with natural light.</p>
+                </div>
+                <div class="flex justify-center">
+                    <a class="btn rounded-3xl bg-[#ABEF5F80] font-bold text-[#212121]">Book Consult<div class="rounded-full flex items-center justify-center bg-[#ABEF5F80] w-6 h-6">
+                        <i class="fa-solid fa-arrow-up rotate-45 "></i>
+                    </div></a>
+                </div>
             </section>
     </header>
 </body>
