--- a/index.html
+++ b/index.html
@@ -134,6 +134,59 @@
                 <img class=" md:w-4/5" src="./assets/Rectangle.png" alt="">
             </div>
         </div>
+        <!-- how to work section -->
+        <section class="w-4/5 mx-auto">
+            <!-- work title -->
+            <div class="">
+                <div class="flex justify-center">
+                    <button class="btn btn-sm bg-slate-200 hover:bg-white text-black font-bold border-none"><div><i class="fa-solid fa-arrow-right"></i></div>How we works</button>
+                </div>
+                <h1 class="font-bold text-2xl md:text-4xl my-4 text-[#212121] text-center">Our Works Process</h1>
+                <p class="text-[#494949] text-center md:w-3/5 mx-auto">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+            </div>
+            <!-- card 1 -->
+            <div class="grid  md:w-full md:grid-cols-4 gap-5 py-10">
+                <div class="card bg-[#E7C1D3] shadow-xl">
+                    <div class="card-body text-[#1C1C1C]">
+                      <div  class="">
+                        <img src="./assets/concept.png" alt="">
+                      </div>
+                      <h2 class="card-title font-bold">Concept</h2>
+                      <p class=" text-[#494949]">The barn house captivates with its blend of rustic charm and modern.</p>
+                    </div>
+                </div>
+                <!-- card - 2 -->
+                <div class="card bg-[#EFDA6E] shadow-xl">
+                    <div class="card-body text-[#1C1C1C]">
+                      <div  class="">
+                        <img src="./assets/flow-chart.png" alt="">
+                      </div>
+                      <h2 class="card-title font-bold">Concept</h2>
+                      <p class=" text-[#494949]">The barn house captivates with its blend of rustic charm and modern.</p>
+                    </div>
+                </div>
+                <!-- card - 3 -->
+                <div class="card bg-[#A4DAC3] shadow-xl">
+                    <div class="card-body text-[#1C1C1C]">
+                      <div  class="">
+                        <img src="./assets/vision.png" alt="">
+                      </div>
+                      <h2 class="card-title font-bold">Concept</h2>
+                      <p class=" text-[#494949]">The barn house captivates with its blend of rustic charm and modern.</p>
+                    </div>
+                </div> 
+                <!-- card - 4 -->
+                <div class="card bg-[#77AAEA] shadow-xl">
+                    <div class="card-body text-[#1C1C1C]">
+                      <div  class="">
+                        <img src="./assets/budget-planning.png" alt="">
+                      </div>
+                      <h2 class="card-title font-bold">Concept</h2>
+                      <p class=" text-[#494949]">The barn house captivates with its blend of rustic charm and modern.</p>
+                    </div>
+                </div>                                                 
+            </div>
+        </section>
     </main>
 </body>
 </html>
