contact section done

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="style.css">
 </head>
 <body class="bg-white">
     <!-- =-=-=-=-=-=-=-=-=-=-=-=-=-=-=
@@ -185,6 +186,57 @@
                       <p class=" text-[#494949]">The barn house captivates with its blend of rustic charm and modern.</p>
                     </div>
                 </div>                                                 
+            </div>
+        </section>
+        <!-- challaging part
+         <section class="grid grid-cols-12 text-black w-4/5 mx-auto gap-5">
+            <div class=" border bg-black text-white col-span-5">d</div>
+            <div class=" border bg-black text-white col-span-7">js</div>
+            <div class=" border bg-black text-white col-span-3">k</div>
+            <div class=" border bg-black text-white col-span-5">k</div>
+            <div class=" border bg-black text-white col-span-4">l</div>
+         </section> -->
+
+        <!-- -=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
+                contact section
+        =-=-=-=-=-=-=-=--=-=-=--=-=-=-=-= -->
+        <section class="bg-[url('assets/bg.jpg')] bg-cover bg-no-repeat">
+            <div class=" relative w-4/5 md:w-4/6 mx-auto py-8 md:py-20">
+                <div class="flex justify-center font-bold">
+                    <button class="btn btn-sm bg-[#ABEF5F33] hover:bg-fuchsia-50 text-[#494949] font-bold border-none"><div><i class="fa-solid fa-arrow-right"></i></div> About Us</button>
+                </div>
+                <!-- title -->
+                <div class="my-5">
+                    <h1 class="text-3xl md:text-5xl text-[#212121] font-bold text-center">Let’s Discuss Next Project</h1>
+                    <p class="text-[#494949] text-center mt-3">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+                </div>
+                <!-- form -->
+                <div class="py-6 space-y-6">
+                    <form action="#">
+                        <div class="grid grid-cols-6 gap-6">
+                            <div class="col-span-6 sm:col-span-3">
+                                <input type="text" name="product-name" id="product-name" class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-2xl focus:ring-cyan-600 focus:border-cyan-600 block w-full p-2.5" placeholder="First Name*" required="">
+                            </div>
+                            <div class="col-span-6 sm:col-span-3">
+                                <input type="text" name="category" id="category" class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-2xl focus:ring-cyan-600 focus:border-cyan-600 block w-full p-2.5" placeholder="Last Name*" required="">
+                            </div>
+                            <div class="col-span-6 sm:col-span-3">
+                                <input type="text" name="brand" id="brand" class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-2xl focus:ring-cyan-600 focus:border-cyan-600 block w-full p-2.5" placeholder="Phone Number*" required="">
+                            </div>
+                            <div class="col-span-6 sm:col-span-3">
+                                <input type="email" name="price" id="price" class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-2xl focus:ring-cyan-600 focus:border-cyan-600 block w-full p-2.5" placeholder="Email Number*" required="">
+                            </div>
+                            <div class="col-span-full">
+                                <textarea id="product-details" rows="6" class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-2xl focus:ring-cyan-600 focus:border-cyan-600 block w-full p-4" placeholder="Write your message here"></textarea>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            
+                <div class=" border-gray-200 rounded-b">
+                    <button class="text-[#1C1C1C] bg-[#ABEF5F] hover:bg-[#ABEF5F80] focus:ring-4 focus:ring-cyan-200 font-medium rounded-2xl w-full py-2.5 text-center" type="submit">Send Mail</button>
+                </div>
+            
             </div>
         </section>
     </main>
