--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
                 </div>
            
                 <div class="navbar-end">
-                    <div class="hidden md:block md:flex items-center md:gap-3">
-                        <a href="#" class="inline-block md:w-7 md:h-7 bg-gray-500 rounded-full flex justify-center items-center"><i class="fa-solid fa-magnifying-glass text-[#E9E9E9]"></i></a>
+                    <div class="hidden md:flex items-center md:gap-3">
+                        <a href="#" class=" md:w-7 md:h-7 bg-gray-500 rounded-full flex justify-center items-center"><i class="fa-solid fa-magnifying-glass text-[#E9E9E9]"></i></a>
 
-                        <a href="#" class="inline-block md:w-7 md:h-7 bg-gray-500 rounded-full flex justify-center items-center"> <i class="fa-solid fa-cart-shopping text-[#E9E9E9]"></i></a>
+                        <a href="#" class=" md:w-7 md:h-7 bg-gray-500 rounded-full flex justify-center items-center"> <i class="fa-solid fa-cart-shopping text-[#E9E9E9]"></i></a>
 
-                        <a class="btn bg-[#ABEF5F] rounded-3xl">Book Consult<div class="rounded-full flex items-center justify-center bg-black w-6 h-6">
+                        <a class="btn bg-[#ABEF5F] hover:text-white rounded-3xl">Book Consult<div class="rounded-full flex items-center justify-center bg-black w-6 h-6">
                             <i class="fa-solid fa-arrow-up rotate-45 text-white"></i>
                         </div></a>
                     </div>
@@ -89,11 +89,11 @@
                 </div>
                 <!-- banner text section -->
                 <div>
-                    <h1 class="font-bold text-3xl md:text-5xl text-black text-center w-3/4 mx-auto">A barn house of this design has a striking appearance</h1>
+                    <h1 class="font-bold text-3xl md:text-5xl text-black text-center  mx-auto">A barn house of this design has a striking appearance</h1>
                     <p class="text-center w-4/5 mx-auto py-5">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large windows that flood the space with natural light.</p>
                 </div>
                 <div class="flex justify-center">
-                    <a class="btn rounded-3xl bg-[#ABEF5F80] font-bold text-[#212121]">Book Consult<div class="rounded-full flex items-center justify-center bg-[#ABEF5F80] w-6 h-6">
+                    <a class="btn rounded-3xl bg-[#ABEF5F80] hover:text-white font-bold text-[#212121]">View Details<div class="rounded-full flex items-center justify-center bg-[#ABEF5F80] w-6 h-6">
                         <i class="fa-solid fa-arrow-up rotate-45 "></i>
                     </div></a>
                 </div>
@@ -188,14 +188,73 @@
                 </div>                                                 
             </div>
         </section>
-        <!-- challaging part
-         <section class="grid grid-cols-12 text-black w-4/5 mx-auto gap-5">
-            <div class=" border bg-black text-white col-span-5">d</div>
-            <div class=" border bg-black text-white col-span-7">js</div>
-            <div class=" border bg-black text-white col-span-3">k</div>
-            <div class=" border bg-black text-white col-span-5">k</div>
-            <div class=" border bg-black text-white col-span-4">l</div>
-         </section> -->
+        
+    <!-- =-=-=-=-=-=-=-=-=-=-=-=-=-=-=
+            chelenging section
+    =-==-=-=-=-=-==-=-=-=-=-=-=-=-==- --> 
+         <section class="bg-white py-10" >
+            <!-- title section -->
+            <div>
+                <div class="flex justify-center font-bold">
+                    <button class="btn btn-sm bg-[#ABEF5F33] hover:bg-fuchsia-50 text-[#494949] font-bold border-none"><div><i class="fa-solid fa-arrow-right"></i></div>Explore our Latest works</button>
+                </div>
+                <h1 class="font-bold text-3xl md:text-5xl text-[#1C1C1C] text-center py-5">Our Latest Portfolio</h1>
+                <p class="text-center md:w-3/5 mx-auto pb-5">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+            </div>
+            <!-- card section -->
+            <div class="grid md:grid-cols-12 text-black md:w-4/5 mx-auto gap-5">
+                <!-- card-1 -->
+                <div class="col-span-8 rounded-xl">
+                    <div class="card card-side bg-white grid grid-cols-1 md:grid-cols-2 shadow-xl">
+                        <figure class="py-5 px-4 w-full">
+                            <img src="./assets/img1.png" alt="">
+                        </figure>
+                        <div class="card-body">
+                          <h2 class="card-title">Commercial</h2>
+                          <p class="">The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern .</p>
+                          <div class="card-actions justify-start">
+                            <button class="btn btn-ghost">View Details<div class="rounded-full flex items-center justify-center bg-[#ABEF5F80] w-6 h-6">
+                                <i class="fa-solid fa-arrow-up rotate-45 "></i>
+                            </div></button>
+                          </div>
+                        </div>
+                      </div>
+                </div>
+                <!-- card-2 -->
+                <div class="card bg-white bg-transparent col-span-8 md:col-span-4 shadow-xl">
+                    <img src="./assets/img2.png" class="pt-12 px-5" alt="">
+                  </div>
+                <!-- card-3 -->
+                <div class=" border col-span-8 md:col-span-3 card shadow-xl">
+                    <div class="px-5 md:pt-12 w-full pl-16 md:pl-5 py-4">
+                        <img src="./assets/img3.png" alt="">
+                    </div>
+                </div>
+                <!-- card-4 -->
+                <div class="col-span-8 md:col-span-6 rounded-xl">
+                    <div class="card card-side bg-white bg-transparent shadow-xl grid grid-cols-1 md:grid-cols-2">
+                        <figure class="py-5 px-4 w-full">
+                            <img src="./assets/img4.png" alt="">
+                        </figure>
+                        <div class="card-body">
+                          <h2 class="card-title">Commercial</h2>
+                          <p class="">The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern .</p>
+                          <div class="card-actions justify-start">
+                            <button class="btn btn-ghost">View Details<div class="rounded-full flex items-center justify-center bg-[#ABEF5F80] w-6 h-6">
+                                <i class="fa-solid fa-arrow-up rotate-45 "></i>
+                            </div></button>
+                          </div>
+                        </div>
+                      </div>
+                </div>
+                <!-- card-5 -->                
+                <div class=" border col-span-8 md:col-span-3 card shadow-xl">
+                    <div class="px-5 md:pt-12 w-full pl-16 md:pl-5 py-4">
+                        <img src="./assets/img5.png" alt="">
+                    </div>
+                </div>
+            </div>
+         </section>
 
         <!-- -=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
                 contact section
@@ -240,5 +299,33 @@
             </div>
         </section>
     </main>
+        <!-- -=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
+                footer section
+        =-=-=-=-=-=-=-=--=-=-=--=-=-=-=-= -->
+        <footer class="bg-[#1C1C1C] py-8">
+            <div class="w-4/5 mx-auto flex justify-center">
+                <a class="btn btn-ghost text-xl text-[#E9E9E9]"> <div class="rounded-full flex items-center justify-center bg-[#ABEF5F] w-6 h-6">
+                    <i class="fa-solid fa-arrow-up rotate-45 text-[#1C1C1C]"></i>
+                </div> Rinterio</a>
+            </div>
+            <div class="flex justify-center md:w-3/5 mx-auto py-4 text-center">
+                <p>The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+            </div>
+            <!-- footer menu -->
+            <div class=" flex justify-center">
+                <ul class="menu menu-horizontal px-1 text-[#E9E9E9] grid grid-cols-1 md:grid-cols-5 text-center mx-auto">
+                    <li  class=""><a>Home</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a>Portfolio</a></li>
+                    <li><a>Blogs</a></li>
+                    <li><a>Contact Us</a></li>
+                </ul>
+            </div>  
+            <div class="w-4/5 flex justify-center mx-auto py-4">
+                <a class="btn bg-[#ABEF5F] rounded-3xl text-[#1C1C1C] font-bold hover:bg-[#ABEF5F80]">Book Consult<div class="rounded-full flex items-center justify-center bg-black w-6 h-6">
+                    <i class="fa-solid fa-arrow-up rotate-45 text-white"></i>
+                </div></a>
+            </div>
+        </footer>
 </body>
 </html>
