--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
                 <!-- banner text section -->
                 <div>
                     <h1 class="font-bold text-3xl md:text-5xl text-black text-center  mx-auto">A barn house of this design has a striking appearance</h1>
-                    <p class="text-center w-4/5 mx-auto py-5">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large windows that flood the space with natural light.</p>
+                    <p class="text-center w-4/5 mx-auto py-5">
+                        A barn house with this design exudes a striking blend of rustic charm and modern elegance. The structure typically features a tall, peaked roof, reminiscent of traditional agricultural barns,</p>
                 </div>
                 <div class="flex justify-center">
                     <a class="btn rounded-3xl bg-[#ABEF5F80] hover:text-white font-bold text-[#212121]">View Details<div class="rounded-full flex items-center justify-center bg-[#ABEF5F80] w-6 h-6">
@@ -111,22 +112,21 @@
                 </div>
                 <button class="btn btn-sm bg-transparent text-[#494949] font-bold border-none"><div><i class="fa-solid fa-arrow-right"></i></div> About Us</button>
                 <h1 class="font-bold text-[#212121] text-3xl mt-4">We design thoughtful, liveable spaces</h1>
-                <p class="text-[#494949] mt-4">The barn house captivates with its blend of rustic charm and 
-                    modern sophistication, featuring weathered wood, sleek metal accents.</p>
+                <p class="text-[#494949] mt-4">We design thoughtful, livable spaces that seamlessly blend functionality with beauty. Each space is carefully crafted to reflect the unique needs and lifestyle of its occupants,</p>
                     <!-- card item1 -->
                 <div class="flex justify-center items-center gap-5 py-5 bg-white rounded-lg px-2 mt-4">
                     <div><img src="./assets/commercial.png" alt=""></div>
                     <div>
                         <h3 class="text-[#494949] font-bold">Commercial</h3>
-                        <p class="text-[#737373]">The barn house captivates with its blend of rustic charm and modern.</p>
+                        <p class="text-[#737373]">Our commercial designs are tailored to create environments that are both functional and visually .</p>
                     </div>
                 </div>
                     <!-- card item2 -->
                     <div class="flex justify-center items-center gap-5 py-5 bg-white rounded-lg px-2 mt-4">
-                        <div><img src="./assets/commercial.png" alt=""></div>
+                        <div><img src="./assets/residential.png" alt=""></div>
                         <div>
-                            <h3 class="text-[#494949] font-bold">Commercial</h3>
-                            <p class="text-[#737373]">The barn house captivates with its blend of rustic charm and modern.</p>
+                            <h3 class="text-[#494949] font-bold">Residential</h3>
+                            <p class="text-[#737373]">Residential design is an art that blends personal expression with practical living.</p>
                         </div>
                     </div>                
             </div>
@@ -143,7 +143,7 @@
                     <button class="btn btn-sm bg-slate-200 hover:bg-white text-black font-bold border-none"><div><i class="fa-solid fa-arrow-right"></i></div>How we works</button>
                 </div>
                 <h1 class="font-bold text-2xl md:text-4xl my-4 text-[#212121] text-center">Our Works Process</h1>
-                <p class="text-[#494949] text-center md:w-3/5 mx-auto">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+                <p class="text-[#494949] text-center md:w-3/5 mx-auto">Our work process is a carefully crafted journey designed to ensure that each project we undertake is</p>
             </div>
             <!-- card 1 -->
             <div class="grid  md:w-full md:grid-cols-4 gap-5 py-10">
@@ -153,7 +153,7 @@
                         <img src="./assets/concept.png" alt="">
                       </div>
                       <h2 class="card-title font-bold">Concept</h2>
-                      <p class=" text-[#494949]">The barn house captivates with its blend of rustic charm and modern.</p>
+                      <p class=" text-[#494949]">The concept phase is the heart of any design project, where ideas begin to take shape and the foundation</p>
                     </div>
                 </div>
                 <!-- card - 2 -->
@@ -162,8 +162,8 @@
                       <div  class="">
                         <img src="./assets/flow-chart.png" alt="">
                       </div>
-                      <h2 class="card-title font-bold">Concept</h2>
-                      <p class=" text-[#494949]">The barn house captivates with its blend of rustic charm and modern.</p>
+                      <h2 class="card-title font-bold">Design Process</h2>
+                      <p class=" text-[#494949]">The design process is a meticulous journey that transforms an idea into a fully realized space.</p>
                     </div>
                 </div>
                 <!-- card - 3 -->
@@ -172,8 +172,8 @@
                       <div  class="">
                         <img src="./assets/vision.png" alt="">
                       </div>
-                      <h2 class="card-title font-bold">Concept</h2>
-                      <p class=" text-[#494949]">The barn house captivates with its blend of rustic charm and modern.</p>
+                      <h2 class="card-title font-bold">Supervision</h2>
+                      <p class=" text-[#494949]">Supervision is a critical aspect of ensuring that the design vision is flawlessly executed.</p>
                     </div>
                 </div> 
                 <!-- card - 4 -->
@@ -182,8 +182,8 @@
                       <div  class="">
                         <img src="./assets/budget-planning.png" alt="">
                       </div>
-                      <h2 class="card-title font-bold">Concept</h2>
-                      <p class=" text-[#494949]">The barn house captivates with its blend of rustic charm and modern.</p>
+                      <h2 class="card-title font-bold">Budget Planning</h2>
+                      <p class=" text-[#494949]">Budget planning is essential to keep your project financially on track. It starts with understanding.</p>
                     </div>
                 </div>                                                 
             </div>
@@ -199,7 +199,7 @@
                     <button class="btn btn-sm bg-[#ABEF5F33] hover:bg-fuchsia-50 text-[#494949] font-bold border-none"><div><i class="fa-solid fa-arrow-right"></i></div>Explore our Latest works</button>
                 </div>
                 <h1 class="font-bold text-3xl md:text-5xl text-[#1C1C1C] text-center py-5">Our Latest Portfolio</h1>
-                <p class="text-center md:w-3/5 mx-auto pb-5">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+                <p class="text-center md:w-3/5 mx-auto pb-5">Our latest portfolio showcases a diverse range of projects that highlight our commitment to innovative design and meticulous craftsmanship</p>
             </div>
             <!-- card section -->
             <div class="grid md:grid-cols-12 text-black md:w-4/5 mx-auto gap-5">
@@ -211,7 +211,7 @@
                         </figure>
                         <div class="card-body">
                           <h2 class="card-title">Commercial</h2>
-                          <p class="">The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern .</p>
+                          <p class="">Our commercial portfolio features a range of projects designed to enhance functionality and brand identity.</p>
                           <div class="card-actions justify-start">
                             <button class="btn btn-ghost">View Details<div class="rounded-full flex items-center justify-center bg-[#ABEF5F80] w-6 h-6">
                                 <i class="fa-solid fa-arrow-up rotate-45 "></i>
@@ -238,7 +238,7 @@
                         </figure>
                         <div class="card-body">
                           <h2 class="card-title">Commercial</h2>
-                          <p class="">The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern .</p>
+                          <p class="">delivering spaces that support productivity and reflect the essence of each brand. .</p>
                           <div class="card-actions justify-start">
                             <button class="btn btn-ghost">View Details<div class="rounded-full flex items-center justify-center bg-[#ABEF5F80] w-6 h-6">
                                 <i class="fa-solid fa-arrow-up rotate-45 "></i>
@@ -267,7 +267,7 @@
                 <!-- title -->
                 <div class="my-5">
                     <h1 class="text-3xl md:text-5xl text-[#212121] font-bold text-center">Let’s Discuss Next Project</h1>
-                    <p class="text-[#494949] text-center mt-3">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+                    <p class="text-[#494949] text-center mt-3"> Share your ideas, goals, and requirements with us, and let’s work together to create a design that meets your needs and exceeds your expectations. </p>
                 </div>
                 <!-- form -->
                 <div class="py-6 space-y-6">
@@ -309,7 +309,7 @@
                 </div> Rinterio</a>
             </div>
             <div class="flex justify-center md:w-3/5 mx-auto py-4 text-center">
-                <p>The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+                <p>The Rinterio project exemplifies our commitment to creating functional and aesthetically pleasing spaces.</p>
             </div>
             <!-- footer menu -->
             <div class=" flex justify-center">
