--- a/index.html
+++ b/index.html
@@ -298,6 +298,9 @@
             
             </div>
         </section>
+        <section>
+            
+        </section>
     </main>
         <!-- -=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
                 footer section
@@ -309,7 +312,7 @@
                 </div> Rinterio</a>
             </div>
             <div class="flex justify-center md:w-3/5 mx-auto py-4 text-center">
-                <p>The Rinterio project exemplifies our commitment to creating functional and aesthetically pleasing spaces.</p>
+                <p class="text-[#737373]">The Rinterio project exemplifies our commitment to creating functional and aesthetically pleasing spaces.</p>
             </div>
             <!-- footer menu -->
             <div class=" flex justify-center">
